Share types between the front and back ends.
